[gd_scene load_steps=31 format=3 uid="uid://c30uceea18q1w"]

[ext_resource type="Texture2D" uid="uid://dloxtqer7p78l" path="res://Graphics/HUD/hud_lives.png" id="2_cfvjc"]
[ext_resource type="Material" uid="uid://bveqi5m5ihsgj" path="res://Shaders/PlayerPalette.tres" id="2_xy7bp"]
[ext_resource type="FontFile" uid="uid://cj70hn8i05uo5" path="res://Graphics/HUD/hud_lives_numerals.png" id="3_eauoj"]
[ext_resource type="Texture2D" uid="uid://c7d6313minexh" path="res://Graphics/HUD/hud_text.png" id="5_kre34"]
[ext_resource type="Script" path="res://Scripts/Misc/HUD.gd" id="6"]
[ext_resource type="FontFile" uid="uid://cticydrc4dda2" path="res://Graphics/HUD/hud_numerals.png" id="6_synv7"]
[ext_resource type="Texture2D" uid="uid://gswo6rq3uyy8" path="res://Graphics/HUD/LevelCards/Banner.png" id="7_ccygi"]
[ext_resource type="FontFile" uid="uid://v4hx32xo1ema" path="res://Graphics/HUD/LevelCards/font/largefont4.png" id="7_uj3el"]
[ext_resource type="Texture2D" uid="uid://c7a17v25ap4ow" path="res://Graphics/HUD/LevelCards/ActCards.png" id="9_3i4aq"]
[ext_resource type="FontFile" uid="uid://qan4ss21y5gp" path="res://Graphics/HUD/LevelCards/font/smallfont3.png" id="10_8dyi8"]
[ext_resource type="Texture2D" uid="uid://bn4id4yr1lron" path="res://Graphics/HUD/hud_results_text.png" id="10_ddlv5"]
[ext_resource type="Texture2D" uid="uid://bbm5bncrd1o4k" path="res://Graphics/HUD/LevelCards/EdgePattern.png" id="10_xpi0a"]
[ext_resource type="Material" uid="uid://uh2c8jbp8qwd" path="res://Shaders/WaterPalette.tres" id="13_1ly2g"]
[ext_resource type="Texture2D" uid="uid://60ak1q0xrn1s" path="res://Graphics/HUD/hud_gametimeover.png" id="15_oja0m"]
[ext_resource type="AudioStream" uid="uid://dh4rsaka62ph4" path="res://Audio/SFX/Gimmicks/Switch.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://dnyw7remih6op" path="res://Audio/Soundtrack/8. SWD_GameOver.ogg" id="16_vq3lx"]
[ext_resource type="AudioStream" uid="uid://clgobastngtvy" path="res://Audio/SFX/Misc/Score.wav" id="17"]

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PatternLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightRatio/PatternRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="6"]
resource_name = "Slider"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PatternLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightRatio/PatternRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15hsr"]
_data = {
"RESET": SubResource("5"),
"Slider": SubResource("6")
}

[sub_resource type="Animation" id="1"]
resource_name = "End"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PatternLeft/PatternLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-32, 0), Vector2(-32, 0), Vector2(-64, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightRatio/PatternRight/PatternRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-32, 32), Vector2(-32, 32), Vector2(0, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardMover:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardMover:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Banner:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(67, 0), Vector2(67, 0), Vector2(67, -203)]
}

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Banner:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(65.5, -203)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PatternLeft/PatternLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightRatio/PatternRight/PatternRight:offset_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-32.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightRatio/PatternRight/PatternRight:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 32)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Banner/Act:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(133, 168)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Banner/Zone:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 108)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Banner/LevelName:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 64)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../LevelClear/Passed:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 64)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../LevelClear/Through:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 108)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../LevelClear/Act:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(328, 120)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PatternLeft/PatternLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(-64, 0), Vector2(-64, 0), Vector2(-32, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightRatio/PatternRight/PatternRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 32), Vector2(-32, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardMover:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Banner:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Banner:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Banner:anchor_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Banner:anchor_top")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Banner/Act:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(453, 168), Vector2(133, 168)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Banner/Zone:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(128, 3), Vector2(128, 3), Vector2(32, 108)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Banner/LevelName:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1, 1.7),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(128, -45), Vector2(128, -45), Vector2(32, 64)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CardMover:process_mode")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Banner:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(67, -203), Vector2(67, -203), Vector2(67, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fgko3"]
_data = {
"End": SubResource("1"),
"RESET": SubResource("2"),
"Start": SubResource("3")
}

[sub_resource type="Animation" id="7"]
resource_name = "LevelClear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Passed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 56), Vector2(64, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Through:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 80), Vector2(64, 80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Act:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 75), Vector2(200, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tally:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 112), Vector2(88, 112)]
}

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Passed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Through:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Act:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(528, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tally:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 112)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21eah"]
_data = {
"LevelClear": SubResource("7"),
"RESET": SubResource("8")
}

[sub_resource type="Animation" id="9"]
resource_name = "GameOver"
length = 13.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Over:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(256, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Game:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Over:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Over:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(256, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Over:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Game:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmnhc"]
_data = {
"GameOver": SubResource("9"),
"RESET": SubResource("10")
}

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("6")

[node name="LifeCounter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -24.0
offset_right = 72.0
offset_bottom = -8.0
grow_vertical = 0

[node name="Icon" type="Sprite2D" parent="LifeCounter"]
material = ExtResource("2_xy7bp")
texture = ExtResource("2_cfvjc")
centered = false
vframes = 7

[node name="LifeText" type="Label" parent="LifeCounter/Icon"]
offset_left = 32.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_eauoj")
text = "0"

[node name="Counters" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 48.0

[node name="Text" type="Sprite2D" parent="Counters"]
texture = ExtResource("5_kre34")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 40, 48)

[node name="ScoreNumber" type="Label" parent="Counters/Text"]
offset_left = 48.0
offset_right = 48.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "0"

[node name="TimeNumbers" type="Label" parent="Counters/Text"]
offset_left = 32.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "00:00"

[node name="RingCount" type="Label" parent="Counters/Text"]
offset_left = 48.0
offset_top = 32.0
offset_right = 56.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "0"

[node name="Time" type="Sprite2D" parent="Counters/Text"]
visible = false
position = Vector2(0, 16)
texture = ExtResource("5_kre34")
centered = false
region_enabled = true
region_rect = Rect2(0, 48, 40, 16)

[node name="Rings" type="Sprite2D" parent="Counters/Text"]
visible = false
position = Vector2(0, 32)
texture = ExtResource("5_kre34")
centered = false
region_enabled = true
region_rect = Rect2(0, 64, 40, 16)

[node name="BlueRings" type="Sprite2D" parent="Counters/Text"]
visible = false
position = Vector2(0, 32)
texture = ExtResource("5_kre34")
centered = false
region_enabled = true
region_rect = Rect2(0, 80, 40, 16)

[node name="LevelCard" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Cover" type="ColorRect" parent="LevelCard"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Banner" type="TextureRect" parent="LevelCard"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.5
offset_top = -203.0
offset_right = 94.5
size_flags_stretch_ratio = 0.0
texture = ExtResource("7_ccygi")
stretch_mode = 2

[node name="LevelName" type="Label" parent="LevelCard/Banner"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 156.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("7_uj3el")
text = "BASE"
uppercase = true

[node name="Zone" type="Label" parent="LevelCard/Banner"]
layout_mode = 0
offset_left = 32.0
offset_top = 108.0
offset_right = 156.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("7_uj3el")
text = "ZONE"
uppercase = true

[node name="Act" type="Sprite2D" parent="LevelCard/Banner"]
position = Vector2(133, 168)
texture = ExtResource("9_3i4aq")
centered = false
hframes = 2
vframes = 2

[node name="PatternLeft" type="Control" parent="LevelCard"]
anchors_preset = 0
anchor_bottom = 1.0
offset_bottom = 14816.0

[node name="PatternLeft" type="TextureRect" parent="LevelCard/PatternLeft"]
layout_mode = 1
anchors_preset = -1
offset_left = -32.0
offset_right = 32.0
offset_bottom = 256.0
grow_vertical = 2
texture = ExtResource("10_xpi0a")
stretch_mode = 1

[node name="RightRatio" type="Control" parent="LevelCard"]
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PatternRight" type="Control" parent="LevelCard/RightRatio"]
anchors_preset = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -32.0
offset_bottom = 14528.0

[node name="PatternRight" type="TextureRect" parent="LevelCard/RightRatio/PatternRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.003
anchor_right = 1.0
anchor_bottom = 0.003
offset_top = -12.352
offset_right = 4448.0
offset_bottom = 243.648
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("10_xpi0a")
stretch_mode = 1

[node name="CardMover" type="AnimationPlayer" parent="LevelCard"]
libraries = {
"": SubResource("AnimationLibrary_15hsr")
}
autoplay = "Slider"
speed_scale = 4.0

[node name="CardPlayer" type="AnimationPlayer" parent="LevelCard"]
libraries = {
"": SubResource("AnimationLibrary_fgko3")
}
autoplay = "Start"

[node name="LevelClear" type="Control" parent="."]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Passed" type="Label" parent="LevelClear"]
layout_mode = 0
offset_left = -256.0
offset_top = 56.0
offset_right = -103.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("10_8dyi8")
text = "SONIC got"
uppercase = true

[node name="Through" type="Label" parent="LevelClear"]
layout_mode = 0
offset_left = -256.0
offset_top = 80.0
offset_right = -137.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("10_8dyi8")
text = "through"
uppercase = true

[node name="Act" type="Sprite2D" parent="LevelClear"]
position = Vector2(528, 75)
texture = ExtResource("9_3i4aq")
centered = false
hframes = 2
vframes = 2

[node name="Animator" type="AnimationPlayer" parent="LevelClear"]
libraries = {
"": SubResource("AnimationLibrary_21eah")
}

[node name="Tally" type="Sprite2D" parent="LevelClear"]
position = Vector2(-256, 112)
texture = ExtResource("10_ddlv5")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 80, 32)

[node name="ScoreText" type="Sprite2D" parent="LevelClear/Tally"]
position = Vector2(0, 48)
texture = ExtResource("10_ddlv5")
centered = false
vframes = 5
frame = 3
region_rect = Rect2(0, 0, 40, 16)

[node name="ScoreNumber" type="Label" parent="LevelClear/Tally"]
offset_left = 104.0
offset_top = 48.0
offset_right = 112.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "0"

[node name="TimeNumbers" type="Label" parent="LevelClear/Tally"]
offset_left = 104.0
offset_right = 104.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "0"

[node name="RingNumbers" type="Label" parent="LevelClear/Tally"]
offset_left = 104.0
offset_top = 16.0
offset_right = 104.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("6_synv7")
text = "0"

[node name="CounterWait" type="Timer" parent="LevelClear"]
wait_time = 6.0
one_shot = true

[node name="CounterCount" type="Timer" parent="LevelClear"]
wait_time = 0.001

[node name="Counter" type="AudioStreamPlayer" parent="LevelClear"]
stream = ExtResource("16")
bus = &"SFX"

[node name="Score" type="AudioStreamPlayer" parent="LevelClear"]
stream = ExtResource("17")
bus = &"SFX"

[node name="GameOver" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Game" type="Sprite2D" parent="GameOver"]
position = Vector2(-256, 0)
scale = Vector2(1, 1e-05)
texture = ExtResource("15_oja0m")
offset = Vector2(-40, 0)
vframes = 3

[node name="Over" type="Sprite2D" parent="GameOver"]
position = Vector2(256, 0)
scale = Vector2(1, 1e-05)
texture = ExtResource("15_oja0m")
offset = Vector2(40, 0)
vframes = 3
frame = 2

[node name="GameOver" type="AnimationPlayer" parent="GameOver"]
libraries = {
"": SubResource("AnimationLibrary_dmnhc")
}

[node name="GameOverMusic" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_vq3lx")
bus = &"Music"

[node name="Water" type="CanvasLayer" parent="."]

[node name="WaterOverlay" type="ColorRect" parent="Water"]
visible = false
material = ExtResource("13_1ly2g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ElecFlash" type="ColorRect" parent="Water/WaterOverlay"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="timeout" from="LevelClear/CounterCount" to="." method="_on_CounterCount_timeout"]
